[tool.poetry]
name = "lunaticoastro-dragonfly-controller"
version = "0.12.0"
description = "Python Lib to control lunaticoastro dragonfly"
readme = "README.md"
authors = ["Robert Bradley <robbrad182@gmail.com>"]
packages = [
    { include = "dragonfly_dome", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
connexion = {extras = ["swagger-ui"], version = "^3.0.6"}
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
jsonschema = "*"
pylint = "*"
pytest = "*"
setuptools = "*"
pytest-bdd = "*"
allure-pytest-bdd = "*"
pytest-xdist = {extras = ["psutil"], version = "*"}
pyhamcrest = "*"

[tool.poetry.scripts]
lunaticoastro_dragonfly_controller = "dragonfly_dome:controller"

[tool.pytest.ini_options]
pythonpath = ["."]  # This may still be unnecessary depending on your structure

[tool.poetry.urls]
issues = "https://github.com/robbrad/lunaticoastro-dragonfly-controller/issues"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
major_version_zero = true
version_provider = "poetry"
version_scheme = "semver"
version_files = [
    "home-assistant/custom_components/lunaticoastro-dragonfly-controller/manifest.json:version",
    "home-assistant/custom_components/lunaticoastro-dragonfly-controller/manifest.json:requirements",
    "swagger.yaml:version"
]
